# AUV-Tasks

./: README.md
install/chat_pkg/lib/chat_pkg/: chat_node  chat_node=chat_pkg.chat_node:mainraw_publisher  output_node  processor_node  raw_publisher
install/chat_pkg/share/chat_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/nav_interfaces/include/nav_interfaces/nav_interfaces/msg/: rosidl_generator_cpp__visibility_control.hpp
install/nav_interfaces/share/nav_interfaces/: package.ps1  package.sh
install/nav_interfaces/share/nav_interfaces/cmake/: export_nav_interfaces__rosidl_generator_cExport.cmake  export_nav_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  export_nav_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  nav_interfaces__rosidl_typesupport_cExport.cmake  nav_interfaces__rosidl_typesupport_introspection_cExport.cmake
install/nav_interfaces/share/nav_interfaces/rust/: Cargo.toml
install/nav_interfaces/share/nav_interfaces/rust/src/msg/: rmw.rs
install/nav_pkg/lib/nav_pkg/: commander  navigator
install/nav_pkg/share/nav_pkg/: package.ps1  package.sh  package.xml
install/vision_pkg/lib/vision_pkg/: visual_lock
install/vision_pkg/share/vision_pkg/: package.sh
log/: latest_build
src/chat_pkg/: package.xml  setup.py
src/chat_pkg/chat_pkg/: chat_node.py  processor_node.py  raw_publisher.py
src/nav_interfaces/: CMakeLists.txt  package.xml
src/nav_pkg/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/vision_pkg/: package.xml  setup.py
src/vision_pkg/vision_pkg/: visual_lock.py
(+8 files in other folders)
