<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <name>nav_pkg</name>
  <version>0.0.0</version>
  <description>Dead Reckoning Navigation Package</description>

  <maintainer email="vboxuser@todo.todo">vboxuser</maintainer>
  <license>Apache-2.0</license>

  <!-- Build Tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <!-- Runtime -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Message package group -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
